Incrementors and adjustable parameters are funtional; started on bounds for face detection.

--- a/JAVS.ComputerVision.UI/JAVS.ComputerVision.UI/MainWindow.xaml
+++ b/JAVS.ComputerVision.UI/JAVS.ComputerVision.UI/MainWindow.xaml
@@ -32,6 +32,11 @@
                   HorizontalAlignment="Center"
                   VerticalAlignment="Center"
                   Margin="0,100,0,0" SelectionChanged="DetectorSelector_SelectionChanged"/>
+        <Grid x:Name="IncrementControlGrid"
+              VerticalAlignment="Center"
+              Margin="0,200,0,0">
+            
+        </Grid>
         <Image Grid.Column="0"
                x:Name="imageOriginal"
                HorizontalAlignment="Left"
