More stuff that should have been done in an appropriate branch

--- a/JAVS.ComputerVision.UI/JAVS.ComputerVision.UI/APIClientWindow.xaml
+++ b/JAVS.ComputerVision.UI/JAVS.ComputerVision.UI/APIClientWindow.xaml
@@ -7,13 +7,13 @@
         mc:Ignorable="d"
         Title="APIClientWindow" Height="300" Width="300">
     <Grid>
-        <TextBlock x:Name="ResultsTextBox" HorizontalAlignment="Left" Height="131" Margin="10,10,0,0" TextWrapping="Wrap" Text="Results" VerticalAlignment="Top" Width="107"/>
+        <TextBlock x:Name="ResultsTextBlock" HorizontalAlignment="Left" Height="131" Margin="10,10,0,0" TextWrapping="Wrap" Text="Results" VerticalAlignment="Top" Width="107"/>
         <ComboBox x:Name="ActionSelectionBox" HorizontalAlignment="Left" Height="21" Margin="10,146,0,0" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="OpenFile" Content="Open File" HorizontalAlignment="Left" Height="22" Margin="10,183,0,0" VerticalAlignment="Top" Width="120"/>
         <ComboBox x:Name="ActionOptions" HorizontalAlignment="Left" Height="22" Margin="10,210,0,0" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="ActionInvoke" Content="Send" HorizontalAlignment="Left" Height="22" Margin="10,237,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.54,1.543"/>
         <Image x:Name="LoadedFile" HorizontalAlignment="Left" Height="131" Margin="140,10,0,0" VerticalAlignment="Top" Width="142"/>
-        <Label x:Name="ActionSummaryLabel" Content="Summary" HorizontalAlignment="Left" Height="36" Margin="201,158,0,0" VerticalAlignment="Top" Width="81"/>
-        <TextBlock x:Name="ActionDetailsTextBox" HorizontalAlignment="Left" Height="57" Margin="167,202,0,0" TextWrapping="Wrap" Text="Details" VerticalAlignment="Top" Width="115"/>
+        <TextBox x:Name="ActionOptionsTextBox" Text="Input" HorizontalAlignment="Left" Height="36" Margin="167,158,0,0" VerticalAlignment="Top" Width="115"/>
+        <TextBlock x:Name="ActionDetailsTextBlock" HorizontalAlignment="Left" Height="57" Margin="167,202,0,0" TextWrapping="Wrap" Text="Details" VerticalAlignment="Top" Width="115"/>
     </Grid>
 </Window>
